--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
   {% include google-analytics.html %}
 
   <!-- CSS -->
-  <link rel="stylesheet" href="{{ "assets/css/main.css" | relative_url }}" />
+  <link rel="stylesheet" href="{{ site.baseurl }}/assets/css/main.css" />
   {% include font-includes.html %}
 
   <!-- Icons -->
