--- a/_includes/post-meta.html
+++ b/_includes/post-meta.html
@@ -18,7 +18,7 @@
       {% endfor %}
 
       {% if category_page %}
-        <a href="{{ category_page.url | relative_url }}">
+        <a href="{{ category_page.url }}">
           {{ category_page.title | default: category_page.category }}
         </a>
       {% else %}
