--- a/_includes/tags-list.html
+++ b/_includes/tags-list.html
@@ -27,7 +27,7 @@
         {% for post in site.tags[tag] %}
           <li>
             <h3>
-              <a href="{{ post.url | relative_url }}">
+              <a href="{{ post.url }}">
                 {{ post.title }}
                 <small>{{ post.date | date_to_string }}</small>
               </a>
