--- a/_includes/sidebar-icon-links.html
+++ b/_includes/sidebar-icon-links.html
@@ -35,7 +35,7 @@
     <a id="tags-link"
        class="icon{% if page.url == '/tags' %} active{% endif %}"
        title="Tags" aria-label="Tags"
-       href="{{ tags_page.url | relative_url }}">
+       href="{{ tags_page.url }}">
       {% include svg/tags.svg %}
     </a>
   {% endif %}
