--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,5 +2,9 @@
 # Use a comment to ensure Jekyll reads the file to be transformed into CSS later
 # only main files contain this front matter, not partials.
 ---
+$sidebar-bg-color: #00BFFF;
+$link-color: #ac4142;
+$sidebar-sticky: false;
+
 
 @import "hydeout";
