--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -2,9 +2,8 @@
 # Use a comment to ensure Jekyll reads the file to be transformed into CSS later
 # only main files contain this front matter, not partials.
 ---
-# Jekyll needs front matter for SCSS files
----
-$sidebar-bg-color: #033;
-$link-color: #ac4142;
-$sidebar-sticky: false;
+$sidebar-bg-color: #4D4F8A;
+$link-color: #B71C1C;
+$sidebar-sticky: true;
+$layout-reverse: false;
 @import "hydeout";
